--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,15 @@
 				<version>${mule.maven.plugin.version}</version>
 				<extensions>true</extensions>
 				<configuration>
+				<cloudHubDeployemnt>
+				<username>ravindrabura18</username>
+				<environment>Sandbox</environment>
+				<workers>1</workers>
+				<workerType>Micro</workerType>
+				<applicationName>sfdc-integration-svc</applicationName>
+				<password>Test2019</password>
+				<muleVersion>4.2.2</muleVersion>
+				</cloudHubDeployemnt>
 				</configuration>
 			</plugin>
 		</plugins>
